# SPR-Vision-2025

./: 2025自瞄能量机关环境&代码部署调试备忘录.md  README.md  install_from_zips.sh
Main_ws/src/rm_auto_aim/base_detector/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/base_detector/src/: base_detector_sub.cpp
Main_ws/src/rm_bringup/config/: camera_info.yaml  camera_params.yaml  launch_params.yaml  old2camera_info.yaml
Main_ws/src/rm_bringup/launch/: bringup.launch_mvtest_openvino.py
Main_ws/src/video_recorder/: CMakeLists.txt  package.xml
Main_ws/src/video_recorder/src/: video_recorder_node.cpp
Utils/: install_from_zips.sh
Utils/start/: autoaim_begin.sh  autoaim_begin1.sh  需要添加到Gnome开机自启动配置里面的命令
src/rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_pose_estimator.cpp
src/rm_auto_aim/armor_detector_test/src/: armor_detector.cpp  armor_detector_node.cpp
src/rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
src/rm_bringup/config/: camera_infonewdame.yaml  camera_params.yaml  old2camera_info.yaml  oldcamera_info3.yaml
src/rm_bringup/config/node_params/: armor_detector_params.yaml  serial_driver_params.yaml
src/rm_bringup/launch/: bringup.launch_mvtest.py  bringup.launch_mvtest_nonumber.py
src/rm_interfaces/msg/: SerialReceiveData.msg
src/rm_robot_description/urdf/: rm_gimbal.urdf.xacro
src/rm_vision_bringup/: package.xml
src/rm_vision_bringup/config/: launch_params.yaml  node_params.yaml
src/rm_vision_bringup/launch/: common.py  vision_bringup.launch.py
(+15 files in other folders)
